2015-02-04  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/61548
	* varpool.c (varpool_node::remove): Fix order of variables.

2015-02-04  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/64686
	* ipa-inline.c (inline_small_functions): Fix ordering issue between
	speculation resolution and key updates.

2015-02-04  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-prop.c (update_indirect_edges_after_inlining): By more careful
	about not letting any speculative edges unupdated.

2015-02-04  Jan Hubicka  <hubicka@ucw.cz>

	PR gcov/64123
	* gcov-io.c (gcov_var): Export.

2015-02-04  Jan Hubicka  <hubicka@ucw.cz>

	PR middle-end/64922
	* ipa-prop.c (update_indirect_edges_after_inlining): Correctly update
	edges that become speculative.

2015-02-04  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (is_fortran): Also return true for DW_LANG_Fortran03
	or DW_LANG_Fortran08.
	(lower_bound_default): Return 1 for DW_LANG_Fortran03 or
	DW_LANG_Fortran08.
	(gen_compile_unit_die): Handle "GNU Fortran2003" and
	"GNU Fortran2008" language strings.
	* dbxout.c (get_lang_number): Use lang_GNU_Fortran.
	* langhooks.h (lang_GNU_Fortran): New prototype.
	* langhooks.c (lang_GNU_Fortran): New function.
	* config/rs6000/rs6000.c (rs6000_output_function_epilogue): Use
	lang_GNU_Fortran.

2015-02-04  Eric Botcazou  <ebotcazou@adacore.com>

	* config/sparc/sparc.c (RTX_OK_FOR_OFFSET_P): Fix off-by-one error.
	(RTX_OK_FOR_OLO10_P): Likewise.

2015-02-04  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-ssa-loop-ivopts.c (get_address_cost): Use right mode for offset.

2015-02-04  Jan Hubicka  <hubicka@ucw.cz>

	PR middle-end/64922
	* gimple.c: Include gimple-ssa.h.
	(maybe_remove_unused_call_args): New function.
	* gimple.h (maybe_remove_unused_call_args): Declare.
	* cgraph.c (cgraph_edge::redirect_call_stmt_to_callee): Use it.
	* tree-ssa-pre.c (eliminate_dom_walker::before_dom_children): Likewise.
	* gimple-fold.c (gimple_fold_call): Likewise.

2015-02-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR rtl-optimization/64905